found a height-related layout bug regarding sponsirship-dialog-container and rectified it the first way I knew how

--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,7 @@ th.column.text-xs-left:first-child {
     justify-content: space-between;
     margin-top: 6%;
     margin-left: 6%;
+    padding-bottom: 3%;
 }
 
 .add-to-package {
@@ -589,7 +590,7 @@ button.sponsorship-dialog-info.v-btn.theme--light {
 
 .sponsorship-dialog-container.v-card.theme--light {
     width: 100%;
-    height: 100%;
+    height: 105%;
 }
 
 .sponsorship-modal-info>.v-table__overflow {
